# flight-price-tracker

./: .gitignore  Development plan  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: __init__.py  models.py  routes.py  swagger.yaml  tasks.py
app/services/: amadeus_client.py  notification_service.py
migrations/versions/: 80f9ff942879_.py  ccbeb1b2af20_initial_migration.py  ecfa6f29c2c5_remove_bidirectional_relationship_for_.py
tests/: test_routes.py
