[project]
name = "flight-price-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "amadeus>=10.1.0",
    "flasgger>=0.9.7.1",
    "flask-cors>=5.0.0",
    "flask-migrate>=4.0.7",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.0.3",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy>=2.0.35",
]
